--- a/readme.adoc
+++ b/readme.adoc
@@ -1,109 +1,73 @@
-*RestComm MayDay  - Android SDK* +
+:imagesdir: doc/images/
 
-Android Mobile SDK to easily integrate communication features (messaging, presence, voice, video) based on RestComm MayDay into native Mobile Applications. 
+== *MayDay Customer* +
+Launch the MayDay customer application.
 
-*Import Mayday.sdk and restcomm.android.client.sdk following below steps* +
-
-*Step 1:* Create New Project in Android Studio. +
-*Step 2:* Now open file menu and click on import module. +
-*Step 3:* Open Directory. +
-*Step 4:* Select Directory Module. + 
-Now select your module location from dialog, here we are using *mayday.sdk* and *restcomm.android.client.sdk*. +
-*Step 5*: Register Module. +
-1) Register module in build.gradle: For that follow these simple seven steps Open file menu and click on project structure. +
-2) Now in Project Structure dialog box select app under module. +
-3) Now Click on Dependencies tab in project structure dialog. +
-4) Click on + sign in right side corner. +
-5) Select Module Dependency from list. +
-6) Select module that we have import from dialog box both *mayday.sdk* and *restcomm.android.client.sdk*. +
-7) Click apply and Ok. +
-     Now library/module is registered in build.gradle. +
-*Step 6:* Finally click on sync gradle button. +
-Now library-project/module is registered and synced with gradle now you can use it.
- 
-*OS/Hardware requirements* +
-RestComm Client SDK for Android has been tested to work on Android API level 16 and above (Android 4.1 and above). +
-
-*MayDayRegister* +
-Initialize MayDayRegister class for registering the device in you activity. +
-----
-MayDayRegister mMayDayRegister = new MayDayRegister (); 
-mMayDayRegister.setListener(this);
-
-//Initialize RCClient for remote connection 
-mMayDayRegister.initialize(getApplicationContext());
-----
- 
-+++<u>+++*Register video/chat call*+++</u>+++
-
----- 
-HashMap mParams = new Hash Map<>(); 
-mParams.put("pref_proxy_domain", "sip:" + “your domain ip address”); //example :192.168.1.100 
-mParams.put("pref_sip_user", “customer/agent name”);   //example: bob 
-mParams.put("pref_sip_password",”password”);  // example:1234 
-mMayDayRegister.createDevice(mParams, getApplicationContext(), MainActivity.class);
----- 
-
-*MayDayVideoCall*** **
-
-Create a two FrameLayout in activity_main.xml
-----
-<FrameLayout 
-    	android:id="@+id/fragment_content" 
-    	android:layout_width="match_parent" 
-    	android:layout_height="match_parent" />
-
-<FrameLayout 
-	android:id="@+id/fragment_mayday" 
-	android:layout_width="match_parent" 
-	android:layout_height="match_parent" />
-----
- 
-Initialize MayDayVideoCallFragment and pass Bundle arguments to whom so ever need to make a video call.
- 
----- 
-Bundle videoBundle = new Bundle(); 
-videoBundle.putString(Constant.AGENT_NAME, “customer/agent name”); //example :bob 
-videoBundle.putString(Constant.DOMAIN_ADDRESS, “you domain ip address”); // example : 192.168.1.100 
-videoBundle.putString(Constant.VIDEO_CALL, OutGoing); 
-
-MayDayVideoCallFragment videoCallFragment = new MayDayVideoCallFragment(); 
-videoCallFragment.setArguments(videoBundle);
- 
-FragmentManager  mFragmentManagerMayDay.beginTransaction ().replace(R.id.fragment_mayday, videoCallFragment).commit();
-----
- 
-*MayDayMessageChat*
- 
-Initialize MayDayMessageChatFragment and pass Bundle arguments to whom so ever need to make a message chat.
-
----- 
-Bundle chatBundle = new Bundle(); 
-chatBundle.putString(Constant.AGENT_NAME,“customer/agent name”); //example :bob 
-chatBundle.putString(Constant.DOMAIN_ADDRESS, , “you domain ip address”); // example : 192.168.1.100
-
-MayDayMessageChatFragment messageChatFragment = new MayDayMessageChatFragment(); 
-messageChatFragment.setArguments(chatBundle);
-
-FragmentManager  mFragmentManagerMayDay.beginTransaction().replace(R.id.fragment_mayday, messageChatFragment).commit();
-----
+image::customer_login.png[]
  
  
-*Permission in manifest.xml*
+User can select the “Settings” icon. Enter the Domain name and Agent name.
 
-----
-<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/> 
-<uses-permission android:name="android.permission.CAMERA" /> 
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
-<uses-permission android:name="android.permission.INTERNET" /> 
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+image::customer_login_setting.png[]
+ 
+Domain is the sip domain to which the user has to register to. Agent is the agent name with whom the customer is going to have a call.  Since current code base doesn’t include any server side call queuing agent name is mentioned as part of the configuration so that when the May day icon is clicked he will be able to have a 1-2-1 call with the agent mentioned in the configuration. This agent configuration can be removed once the application uses server side call queueing.
+ 
+image::customer_login_setting_2.png[]
+ 
+ 
+Login Page +
+ Enter the user name and password in the login screen, Make sure that users are already created in the RestComm application server. Example for user name as “*bob*” and Password as “*1234*”.  
+ 
+image::customer_login.png[]
+ 
+ 
+Once user presses login, the user will be registered with sip server mentioned in the domain in the settings screen and application will show the home screen. In the home screen user will be able to see the products which have current offers on top of the screen and different category likes “Our products”, “My Products”.
 
-----
+image::customer_product.png[]
+ 
+Customer can click on “May day icon” on top right corner and click on the icon to initiate video call. Once the call is invoked user can able to see “Maximize”, “Mute” and “Disconnect” +
 
-*Hardware feature in manifest.xml*
+image::customer_product_video.png[]
 
-----
-<uses-feature android:name="android.hardware.camera"/> 
-<uses-feature android:name="android.hardware.camera.autofocus" />
-----
+When user selects on any product user will be navigated to the “Self-help tips”, “Customer Support” and “Current offers” 
+
+image::customer_support.png[]
+  
+ 
+By selecting “Customer Support” user will be able to navigate to more information.  This can be done even when the video call is active.
+
+image::customer_offer.png[]
+ 
+User can click on “May day icon” on top right corner and click on the icon to initiate Instant message from any page. +
+Chat Window
+
+image::customer_product_chat.png[]
+
+== *MayDay Agent* +
+Once the user clicks on the Mayday Agent launcher, application will show the login screen along with settings icon on the top right corner. User can click on the settings tab and can mention the SIP proxy domain. Example:  “cloud.restcomm.com” or “10.10.220.130” or “10.10.220.130:5080”
+
+image::agent_login_setting.png[]
+
+In the Agent screen enter the Username of the agent and agent password.Example for user name as “*alice*” and Password as “*1234*”.   Make sure that users are created in the RestComm application server.
+
+image::agent_login.png[]
+
+After successful Authentication agent home screen is displayed. Agent home screen shows the statistical view of the agent.
+
+image::agent_details.png[]
+
+When agent receives the call from the customer, contextual information of the customer is displayed.
+
+image::agent_details_video.png[]
+
+When the agent receives the IM messages from the customer, chat window will pop up and shows the chat history.
+
+image::agent_details_chat.png[]
+
+
+
+
+
+ 
+
+
